# cornflex

./: README.md  pyproject.toml
.github/workflows/: pr.yml  publish.yml
cornflex/: __init__.py  reader.py
tests/: test_reader.py
